  as we're simply exposing ZeroMQ's low-level ``zmq::proxy_steerable()`` statistics.

- ``bifcl`` now accepts missing return types in functions signatures, creating
  void functions rather than complaining. The C++ signature will continue
  to have a ``ValPtr`` return type and the implementation should return a ``Val::nil``,
  but the Zeek script function signature will have a void return type.

Changed Functionality
---------------------

- The ``to_subnet()`` built-in function's parsing of IPv6 subnets was changed
  to align with how IPv6 subnet literals are parsed in Zeek scripts. Previously,
  any subnet containing the ``::ffff:0:0/96`` IPv4-mapped prefix would produce
  an IPv4 subnet, even if provided prefix was shorter than the required 96 bits.

  Internally, the behavior of the ``IPPrefix::ConvertString()`` API was changed
  to accommodate for this.

Deprecated Functionality
------------------------

Zeek 8.1.0
==========

We'd like to thank Andrew Raffman (@andyraf), @arm7mm, Artyom Kalabukhov (@predator89090),
Benjamin Grap (@blightzero), @biswajitutil, Jean-Samuel Marier (@cccs-jsjm), @chrisjlly,
Craig P (@multicast-bytes), @DigiAngel, Mike Dopheide (@dopheide-esnet), Edoardo Mich
(@edoardomich), @franky-m, Fupeng Zhao (@AmazingPP), Jan Grashöfer (@J-Gras), Klemens
Nanni (@klemens-ya), Klemens Nanni (@klemensn), @kshitiz56, Mark Overholser
(@markoverholser), Mohan Dhawan (@Mohan-Dhawan), Peter Cullen (@pbcullen), RyugaXhypeR
(@RyugaXhypeR), Seth Hall (@sethhall), Yacin Nadji (@ynadji), Zhang Liang (@JosenLiang),
Zach Robinette (@zrobinette12) and @zzzdong for their contributions to this release.

Breaking Changes
----------------

- A standalone ``zeek`` invocation on the command line will now default to running a No-op
  Cluster backend (``Cluster::CLUSTER_BACKEND_NONE``). Previously this defaulted to Broker
  without having any real effect. For a multi-process / cluster deployment of Zeek, a